# Project-Dev-Multi-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
_ui_sample/: DESIGN.md  code.html
app/: config.py  dependencies.py  main.py
app/agents/: architect_agent.py  feasibility_agent.py  llm.py  planner_agent.py  prompt_builder_agent.py  requirement_agent.py  reviewer_agent.py  schemas.py  supervisor_agent.py
app/api/: middleware_rate_limit.py  routes_agents.py  routes_projects.py  routes_runs.py
app/graph/: builder.py  routes.py  state.py
app/mcp/: __init__.py  codex_export_server.py
app/services/: architecture_conflict_checker.py  constraint_classifier.py  continue_queue.py  decision_parser.py  distributed_lock.py  env_persistence.py  export_service.py  human_interrupt_hook.py  missing_info_resolver.py  observability.py  planning_guardrails.py  prometheus_export.py  (+8 more)
tests/: test_architecture_conflict_checker.py  test_assumption_pack_flow.py  test_checkpointer_health.py  test_codex_mcp_export_server.py  test_constraint_classifier.py  test_coverage_engine.py  test_decision_parser.py  test_dependencies_rebuild.py  test_export_service.py  test_graph.py  test_human_gate_exhaustion.py  test_human_gate_limit.py  test_human_interrupt_hook.py  test_missing_info_resolver.py  test_nodes.py  test_observability_metrics.py  test_planner_budget.py  test_planning_guardrails.py  test_review_rework_flow.py  test_runs_api.py  test_task_dependency_resolver.py  test_tools.py  test_web.py
(+21 files in other folders)
