[project]
name = "project-dev-multiagent"
version = "0.1.0"
description = "LangChain + LangGraph multi-agent MVP for requirement-driven development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "redis>=5.0.0",
  "langchain>=1.0.0",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-sqlite>=3.0.3",
  "langgraph-checkpoint-postgres>=3.0.5",
  "langchain-openai>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
providers = [
  "langchain-anthropic>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-ollama>=0.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
